--- a/app/styles/main/_global.scss
+++ b/app/styles/main/_global.scss
@@ -61,6 +61,10 @@ h1, .h1, h2, .h2, h3, .h3 {
     margin-bottom: 0;
 }
 
+.media-left, .media > .pull-left {
+    margin-right: 15px;
+}
+
 //== Custom Global Styling
 //
 //##
